Refactor model comparison visualizations: - Removed accuracy metric from metrics collection for consistency. - Updated visualization layout to display F1, Precision, and Recall in a single row. - Sorted fields by average F1 score for better clarity in charts. - Adjusted titles and layout for improved readability and presentation.

--- a/notebooks_v2/model_comparison_reporter_v2.ipynb
+++ b/notebooks_v2/model_comparison_reporter_v2.ipynb
@@ -4957,7 +4957,6 @@
     "            'precision': avg_precision,\n",
     "            'recall': avg_recall,\n",
     "            'f1_score': avg_f1,\n",
-    "            'accuracy': avg_f1,  # Use F1 as accuracy for consistency\n",
     "            'support': total,\n",
     "            'model': model_name\n",
     "        })\n",
@@ -4983,25 +4982,29 @@
     "all_metrics.to_csv(metrics_csv_path, index=False)\n",
     "rprint(f\"[green]\u2705 Metrics saved to: {metrics_csv_path}[/green]\")\n",
     "\n",
-    "# Create visualizations\n",
-    "fig, axes = plt.subplots(2, 2, figsize=(20, 16))\n",
+    "# Create visualizations - 3 charts: F1, Precision, Recall\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(24, 10))\n",
     "\n",
-    "# Colors for 3 models: Llama (blue), InternVL3-8B (red), InternVL3-2B (green)\n",
+    "# Colors for 3 models\n",
     "model_colors = ['#3498db', '#e74c3c', '#2ecc71']\n",
     "\n",
-    "# Plot 1: F1 Score comparison\n",
-    "ax1 = axes[0, 0]\n",
-    "pivot_f1 = all_metrics.pivot(index='field', columns='model', values='f1_score')\n",
+    "# Sort fields by average F1 score descending (highest F1 at top of chart)\n",
+    "# For barh: last item in index appears at top, so sort ascending to get highest at top\n",
+    "field_order = all_metrics.groupby('field')['f1_score'].mean().sort_values(ascending=True).index.tolist()\n",
+    "\n",
+    "# Plot 1: F1 Score (ranked by F1 descending - highest at top)\n",
+    "ax1 = axes[0]\n",
+    "pivot_f1 = all_metrics.pivot(index='field', columns='model', values='f1_score').reindex(field_order)\n",
     "pivot_f1.plot(kind='barh', ax=ax1, color=model_colors)\n",
-    "ax1.set_title('F1 Score by Field', fontsize=14, fontweight='bold')\n",
+    "ax1.set_title('F1 Score by Field (Ranked)', fontsize=14, fontweight='bold')\n",
     "ax1.set_xlabel('F1 Score', fontsize=12, fontweight='bold')\n",
     "ax1.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
     "ax1.get_legend().remove() if ax1.get_legend() else None\n",
     "ax1.grid(axis='x', alpha=0.3)\n",
     "\n",
-    "# Plot 2: Precision comparison\n",
-    "ax2 = axes[0, 1]\n",
-    "pivot_precision = all_metrics.pivot(index='field', columns='model', values='precision')\n",
+    "# Plot 2: Precision (same field order as F1)\n",
+    "ax2 = axes[1]\n",
+    "pivot_precision = all_metrics.pivot(index='field', columns='model', values='precision').reindex(field_order)\n",
     "pivot_precision.plot(kind='barh', ax=ax2, color=model_colors)\n",
     "ax2.set_title('Precision by Field', fontsize=14, fontweight='bold')\n",
     "ax2.set_xlabel('Precision', fontsize=12, fontweight='bold')\n",
@@ -5009,9 +5012,9 @@
     "ax2.get_legend().remove() if ax2.get_legend() else None\n",
     "ax2.grid(axis='x', alpha=0.3)\n",
     "\n",
-    "# Plot 3: Recall comparison\n",
-    "ax3 = axes[1, 0]\n",
-    "pivot_recall = all_metrics.pivot(index='field', columns='model', values='recall')\n",
+    "# Plot 3: Recall (same field order as F1)\n",
+    "ax3 = axes[2]\n",
+    "pivot_recall = all_metrics.pivot(index='field', columns='model', values='recall').reindex(field_order)\n",
     "pivot_recall.plot(kind='barh', ax=ax3, color=model_colors)\n",
     "ax3.set_title('Recall by Field', fontsize=14, fontweight='bold')\n",
     "ax3.set_xlabel('Recall', fontsize=12, fontweight='bold')\n",
@@ -5019,24 +5022,14 @@
     "ax3.get_legend().remove() if ax3.get_legend() else None\n",
     "ax3.grid(axis='x', alpha=0.3)\n",
     "\n",
-    "# Plot 4: Accuracy comparison\n",
-    "ax4 = axes[1, 1]\n",
-    "pivot_accuracy = all_metrics.pivot(index='field', columns='model', values='accuracy')\n",
-    "pivot_accuracy.plot(kind='barh', ax=ax4, color=model_colors)\n",
-    "ax4.set_title('Accuracy by Field', fontsize=14, fontweight='bold')\n",
-    "ax4.set_xlabel('Accuracy', fontsize=12, fontweight='bold')\n",
-    "ax4.set_ylabel('Field', fontsize=12, fontweight='bold')\n",
-    "ax4.get_legend().remove() if ax4.get_legend() else None\n",
-    "ax4.grid(axis='x', alpha=0.3)\n",
-    "\n",
     "# Add main title\n",
-    "fig.suptitle('Per-Field Metrics', fontsize=18, fontweight='bold', y=1.04)\n",
+    "fig.suptitle('Per-Field Metrics (Ranked by F1 Score)', fontsize=18, fontweight='bold', y=1.02)\n",
     "\n",
-    "# Single shared legend for all subplots\n",
+    "# Single shared legend\n",
     "handles, labels = ax1.get_legend_handles_labels()\n",
-    "fig.legend(handles, labels, title='Model', loc='upper center', bbox_to_anchor=(0.5, 1.01), ncol=3, fontsize=11, title_fontsize=12)\n",
+    "fig.legend(handles, labels, title='Model', loc='upper center', bbox_to_anchor=(0.5, 0.99), ncol=3, fontsize=11, title_fontsize=12)\n",
     "\n",
-    "plt.tight_layout(rect=[0, 0, 1, 0.96])  # Make room for legend at top\n",
+    "plt.tight_layout(rect=[0, 0, 1, 0.95])\n",
     "plt.savefig(CONFIG['output_dir'].replace('/csv', '/visualizations') + '/per_field_metrics.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
     "\n",
@@ -5047,8 +5040,7 @@
     "summary_stats = all_metrics.groupby('model').agg({\n",
     "    'precision': ['mean', 'median'],\n",
     "    'recall': ['mean', 'median'],\n",
-    "    'f1_score': ['mean', 'median'],\n",
-    "    'accuracy': ['mean', 'median']\n",
+    "    'f1_score': ['mean', 'median']\n",
     "}).round(4)\n",
     "\n",
     "# Flatten column names for display\n",
