Update selected model and data source configuration for accuracy export

--- a/notebooks_v2/harvest_model_accuracy.ipynb
+++ b/notebooks_v2/harvest_model_accuracy.ipynb
@@ -733,11 +733,11 @@
     "# =============================================================================\n",
     "\n",
     "# Choose model to export\n",
-    "SELECTED_MODEL = \"Llama-11B\"  # Options: \"Llama-11B\", \"InternVL3-8B\", \"InternVL3-2B\"\n",
+    "SELECTED_MODEL = \"InternVL3-8B\"  # Options: \"Llama-11B\", \"InternVL3-8B\", \"InternVL3-2B\"\n",
     "\n",
     "# Choose data source\n",
-    "USE_PER_FIELD_METRICS = False  # True = use per_field_metrics.csv (recommended)\n",
-    "                               # False = aggregate from batch results (coverage only)\n",
+    "USE_PER_FIELD_METRICS = True  # True = use per_field_metrics.csv (recommended)\n",
+    "                              # False = aggregate from batch results\n",
     "\n",
     "# Output filename\n",
     "OUTPUT_FILENAME = \"current_model_accuracy.csv\""
