Refactor harvest_model_accuracy notebook to remove accuracy metrics, update export function documentation, and streamline output summaries for F1, Precision, and Recall metrics.

--- a/notebooks_v2/harvest_model_accuracy.ipynb
+++ b/notebooks_v2/harvest_model_accuracy.ipynb
@@ -627,8 +627,7 @@
     "        results.append({\n",
     "            'Subset': 'Invoices & receipts',\n",
     "            'Field': field,\n",
-    "            'Accuracy': coverage,\n",
-    "            'F1': f1,\n",
+    "                        'F1': f1,\n",
     "            'Precision': precision,\n",
     "            'Recall': recall,\n",
     "            'Exclusive': field in EXCLUSIVE_FIELDS,\n",
@@ -651,8 +650,7 @@
     "        results.append({\n",
     "            'Subset': 'Bank statements',\n",
     "            'Field': field,\n",
-    "            'Accuracy': coverage,\n",
-    "            'F1': f1,\n",
+    "                        'F1': f1,\n",
     "            'Precision': precision,\n",
     "            'Recall': recall,\n",
     "            'Exclusive': field in EXCLUSIVE_FIELDS,\n",
@@ -753,7 +751,7 @@
     "                          per_field_df: pd.DataFrame, batch_dfs: dict,\n",
     "                          ground_truth_df: pd.DataFrame,\n",
     "                          output_path: Path) -> pd.DataFrame:\n",
-    "    \"\"\"Export field-level accuracy and F1 for selected model.\"\"\"\n",
+    "    \"\"\"Export field-level F1/Precision/Recall for selected model.\"\"\"\n",
     "\n",
     "    if use_per_field and per_field_df is not None:\n",
     "        print(f\"Using per_field_metrics.csv for {model_name}\")\n",
@@ -770,10 +768,10 @@
     "        return None\n",
     "\n",
     "    # Determine which columns to save\n",
-    "    save_cols = ['Subset', 'Field', 'Accuracy']\n",
+    "    save_cols = ['Subset', 'Field']\n",
     "\n",
     "    # Add F1/Precision/Recall if available\n",
-    "    for col in ['F1', 'Precision', 'Recall', 'F1_Agnostic']:\n",
+    "    for col in ['F1', 'Precision', 'Recall']:\n",
     "        if col in result_df.columns and result_df[col].notna().any():\n",
     "            save_cols.append(col)\n",
     "\n",
@@ -781,17 +779,12 @@
     "        save_cols.append('Exclusive')\n",
     "\n",
     "    result_df[save_cols].to_csv(output_path, index=False)\n",
-    "    print(f\"\\nSaved: {output_path}\")\n",
+    "    print(f\"\n",
+    "Saved: {output_path}\")\n",
     "    print(f\"Fields: {len(result_df)}\")\n",
-    "    print(f\"Mean accuracy: {result_df['Accuracy'].mean():.1%}\")\n",
-    "\n",
-    "    # Print F1 summary\n",
-    "    if 'F1' in save_cols:\n",
-    "        print(f\"Mean F1: {result_df['F1'].mean():.1%}\")\n",
-    "    if 'Precision' in save_cols:\n",
-    "        print(f\"Mean Precision: {result_df['Precision'].mean():.1%}\")\n",
-    "    if 'Recall' in save_cols:\n",
-    "        print(f\"Mean Recall: {result_df['Recall'].mean():.1%}\")\n",
+    "    print(f\"Mean F1: {result_df['F1'].mean():.1%}\")\n",
+    "    print(f\"Mean Precision: {result_df['Precision'].mean():.1%}\")\n",
+    "    print(f\"Mean Recall: {result_df['Recall'].mean():.1%}\")\n",
     "\n",
     "    return result_df\n",
     "\n",
@@ -807,7 +800,8 @@
     ")\n",
     "\n",
     "if exported_df is not None:\n",
-    "    print(\"\\n\" + \"=\" * 60)\n",
+    "    print(\"\n",
+    "\" + \"=\" * 60)\n",
     "    print(\"Exported Data:\")\n",
     "    print(\"=\" * 60)\n",
     "    display(exported_df)"
