Enhance model accuracy comparison notebook with emoji and formatting updates
- Replaced text indicators for accuracy and F1 scores with corresponding emojis for better visual appeal.
- Updated statistical significance reporting to use Greek letter alpha (α) for clarity.
- Improved exclusive capabilities section formatting with bullet points.
- Revised CSV format descriptions for clarity and added column descriptions for better understanding.
- Enhanced F1 calculation method explanation with detailed matching criteria for different field types.

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -478,7 +478,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "📊 ACCURACY:\n",
+      "\ud83d\udcca ACCURACY:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity            85.1%              20.4%     +64.7%         True\n",
       "           SUPPLIER_NAME   Identity            61.5%              58.8%      +2.7%         True\n",
@@ -497,7 +497,7 @@
       "       TRANSACTION_DATES      Dates            92.6%              56.9%     +35.6%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            91.6%              71.9%     +19.7%        False\n",
       "\n",
-      "📈 F1 SCORES (Position-Agnostic):\n",
+      "\ud83d\udcc8 F1 SCORES (Position-Agnostic):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN      85.1%        20.4%        +64.7%\n",
       "           SUPPLIER_NAME      61.5%        58.8%         +2.7%\n",
@@ -543,13 +543,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n📊 ACCURACY:\")\n",
+    "print(\"\\n\ud83d\udcca ACCURACY:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n📈 F1 SCORES (Position-Agnostic):\")\n",
+    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Agnostic):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -848,12 +848,12 @@
       "Paired t-test:\n",
       "  t-statistic: 3.0694\n",
       "  p-value:     0.0078\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 16.0000\n",
       "  p-value:     0.0052\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 0.9732\n",
@@ -876,13 +876,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1634,7 +1634,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean accuracy of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -1736,8 +1736,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -1820,46 +1820,79 @@
     "---\n",
     "## 10. Quick Reference: Data Format Requirements\n",
     "\n",
-    "### Competing Model CSV Format\n",
+    "### CSV File Formats\n",
     "\n",
-    "The notebook accepts multiple CSV formats:\n",
-    "\n",
-    "**Format A - Standard format with Accuracy and F1:**\n",
+    "**competing_model_accuracy.csv:**\n",
     "```csv\n",
-    "Subset,Field,Accuracy,F1\n",
-    "Invoices & receipts,BUSINESS_ABN,0.316,0.42\n",
-    "Invoices & receipts,LINE_ITEM_DESCRIPTIONS,0.387,0.52\n",
-    "Bank statements,TRANSACTION_DATES,0.429,0.55\n",
+    "Subset,Field,F1,Exclusive\n",
+    "Invoices & receipts,BUSINESS_ABN,0.204081633,FALSE\n",
+    "Invoices & receipts,SUPPLIER_NAME,0.587926509,FALSE\n",
+    "Bank statements,TRANSACTION_DATES,0.56918239,FALSE\n",
     "...\n",
     "```\n",
     "\n",
-    "**Format B - Field and Accuracy columns only:**\n",
+    "**current_model_accuracy.csv:**\n",
     "```csv\n",
-    "Field,Accuracy\n",
-    "DOCUMENT_TYPE,95.0\n",
-    "BUSINESS_ABN,87.0\n",
+    "Subset,Field,F1,Precision,Recall,Exclusive\n",
+    "Invoices & receipts,DOCUMENT_TYPE,0.728205128,0.728205128,0.728205,TRUE\n",
+    "Invoices & receipts,BUSINESS_ABN,0.851282051,0.851282051,0.851282,FALSE\n",
+    "Bank statements,TRANSACTION_DATES,0.925574861,0.94022792,0.928886,FALSE\n",
     "...\n",
     "```\n",
     "\n",
-    "**Format C - Single row with field columns:**\n",
-    "```csv\n",
-    "DOCUMENT_TYPE,BUSINESS_ABN,SUPPLIER_NAME,...\n",
-    "0.95,0.87,0.92,...\n",
+    "### Column Descriptions\n",
+    "\n",
+    "| Column | Description |\n",
+    "|--------|-------------|\n",
+    "| Subset | Document category: \"Invoices & receipts\" or \"Bank statements\" |\n",
+    "| Field | Schema field name (e.g., BUSINESS_ABN, TOTAL_AMOUNT) |\n",
+    "| F1 | F1 score (primary comparison metric) |\n",
+    "| Precision | Precision score (optional) |\n",
+    "| Recall | Recall score (optional) |\n",
+    "| Exclusive | TRUE if field is exclusive to our model (not in competing model) |\n",
+    "\n",
+    "### F1 Calculation Method\n",
+    "\n",
+    "All F1 scores are computed using `calculate_field_accuracy_f1()` from `common/evaluation_metrics.py`.\n",
+    "\n",
+    "#### Single-Value Fields\n",
+    "- **Text fields** (SUPPLIER_NAME, BUSINESS_ADDRESS): Levenshtein distance with ANLS-style 0.5 threshold\n",
+    "- **ID fields** (BUSINESS_ABN): Exact match after normalization (remove spaces, dashes, prefixes)\n",
+    "- **Monetary fields** (TOTAL_AMOUNT, GST_AMOUNT): Numeric comparison with 1% tolerance\n",
+    "- **Boolean fields** (IS_GST_INCLUDED): Case-insensitive boolean parsing\n",
+    "- **Date fields** (INVOICE_DATE, STATEMENT_DATE_RANGE): Semantic date parsing supporting ranges and format variations\n",
+    "\n",
+    "#### List Fields (Pipe-Separated Values)\n",
+    "Uses **POSITION-AWARE (order-aware) F1 matching**:\n",
+    "\n",
+    "```\n",
+    "Extracted:    [\"apple\", \"banana\", \"cherry\"]\n",
+    "Ground Truth: [\"banana\", \"apple\", \"cherry\"]\n",
+    "Result:       33.3% F1 (only position 2 matches)\n",
     "```\n",
     "\n",
-    "### Current Model Data Sources\n",
+    "**Position-by-position comparison:**\n",
+    "- Position i: extracted[i] vs ground_truth[i]\n",
+    "- Match at same position \u2192 TP (True Positive)\n",
+    "- Mismatch at same position \u2192 FN (False Negative) \n",
+    "- Extra extracted items \u2192 FP (False Positive)\n",
+    "- Missing ground truth items \u2192 FN (False Negative)\n",
     "\n",
-    "1. **per_field_metrics.csv** - Direct field-level accuracy AND F1 from evaluation pipeline\n",
-    "2. **batch_results_*.csv** - Per-image results (will be aggregated, but no F1)\n",
+    "**Metrics:**\n",
+    "- Precision = TP / (TP + FP)\n",
+    "- Recall = TP / (TP + FN)  \n",
+    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
     "\n",
-    "### F1 Score Comparison Notes\n",
+    "**List field matching by type:**\n",
+    "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
+    "- **Quantity lists** (LINE_ITEM_QUANTITIES): Integer comparison\n",
+    "- **Text lists** (LINE_ITEM_DESCRIPTIONS): Fuzzy text matching (0.75 word overlap threshold)\n",
+    "- **Transaction lists** (TRANSACTION_DATES, TRANSACTION_AMOUNTS_PAID): Type-specific matching\n",
     "\n",
-    "**Important:** Both models must use the same F1 methodology for fair comparison:\n",
-    "- **Position-Agnostic F1** (recommended): Set-based matching - items match regardless of order\n",
-    "- **Position-Aware F1**: Items must match at exact positions (stricter)\n",
+    "### Data Sources\n",
     "\n",
-    "The harvest notebook generates **position-agnostic F1** from `per_field_metrics.csv`.\n",
-    "Add an `F1` column to `competing_model_accuracy.csv` to enable comparison."
+    "- **per_field_metrics.csv** - Generated by `model_comparison_reporter_v2.ipynb`\n",
+    "- **harvest_model_accuracy.ipynb** - Exports per-model CSV files from per_field_metrics.csv"
    ]
   }
  ],
