Enhance visual representation in model accuracy comparison notebook
- Replaced text-based accuracy and F1 score indicators with emoji representations for better readability.
- Updated statistical significance reporting to use the Greek letter alpha (α) for clarity.
- Adjusted x-axis limits in accuracy difference plots for improved visualization.
- Changed bullet points in exclusive capabilities section to use a bullet character (•) for consistency.
- Enhanced mathematical expressions for clarity, including the use of multiplication symbols (×) and arrows (→).

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -479,7 +479,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "📊 ACCURACY:\n",
+      "\ud83d\udcca ACCURACY:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity           100.0%              20.4%     +79.6%         True\n",
       "           SUPPLIER_NAME   Identity           100.0%              58.8%     +41.2%         True\n",
@@ -498,7 +498,7 @@
       "       TRANSACTION_DATES      Dates            96.3%              56.9%     +39.4%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            98.9%              71.9%     +27.0%        False\n",
       "\n",
-      "📈 F1 SCORES (Position-Agnostic):\n",
+      "\ud83d\udcc8 F1 SCORES (Position-Agnostic):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN     100.0%        20.4%        +79.6%\n",
       "           SUPPLIER_NAME     100.0%        58.8%        +41.2%\n",
@@ -544,13 +544,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n📊 ACCURACY:\")\n",
+    "print(\"\\n\ud83d\udcca ACCURACY:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n📈 F1 SCORES (Position-Agnostic):\")\n",
+    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Agnostic):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -849,12 +849,12 @@
       "Paired t-test:\n",
       "  t-statistic: 5.9033\n",
       "  p-value:     0.0000\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 0.0000\n",
       "  p-value:     0.0001\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 2.3360\n",
@@ -877,13 +877,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1598,7 +1598,7 @@
     "ax4.set_yticklabels(diff_sorted['field'], fontsize=7)\n",
     "ax4.set_xlabel('Accuracy Difference', fontsize=9)\n",
     "ax4.set_title('D. Improvement per Field', fontsize=11, fontweight='bold', loc='left')\n",
-    "ax4.set_xlim(-0.05, max(diff_sorted['difference']) + 0.05)\n",
+    "ax4.set_xlim(min(diff_sorted['difference']) - 0.05, max(diff_sorted['difference']) + 0.05)\n",
     "sns.despine(ax=ax4)\n",
     "\n",
     "# --- Panel E: Summary metrics table ---\n",
@@ -1644,7 +1644,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean accuracy of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -1746,8 +1746,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -1883,15 +1883,15 @@
     "\n",
     "**Position-by-position comparison:**\n",
     "- Position i: extracted[i] vs ground_truth[i]\n",
-    "- Match at same position → TP (True Positive)\n",
-    "- Mismatch at same position → FN (False Negative) \n",
-    "- Extra extracted items → FP (False Positive)\n",
-    "- Missing ground truth items → FN (False Negative)\n",
+    "- Match at same position \u2192 TP (True Positive)\n",
+    "- Mismatch at same position \u2192 FN (False Negative) \n",
+    "- Extra extracted items \u2192 FP (False Positive)\n",
+    "- Missing ground truth items \u2192 FN (False Negative)\n",
     "\n",
     "**Metrics:**\n",
     "- Precision = TP / (TP + FP)\n",
     "- Recall = TP / (TP + FN)  \n",
-    "- F1 = 2 × (Precision × Recall) / (Precision + Recall)\n",
+    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
     "\n",
     "**List field matching by type:**\n",
     "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
