Refactor summary statistics table in model accuracy comparison notebook
- Updated table headers to use abbreviated model names for clarity.
- Separated metrics and statistical test results into distinct tables for better organization.
- Enhanced styling for both tables to improve readability and visual appeal.
- Adjusted title padding for better alignment.

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1606,33 +1606,57 @@
     "ax5.axis('off')\n",
     "\n",
     "# Create summary table\n",
-    "table_data = [\n",
-    "    ['Metric', CURRENT_MODEL_NAME[:12], COMPETING_MODEL_NAME[:12]],\n",
-    "    ['Mean', f\"{metrics['current_mean']:.1%}\", f\"{metrics['competing_mean']:.1%}\"],\n",
+    "# Use abbreviated names for table headers\n",
+    "current_short = CURRENT_MODEL_NAME.replace('InternVL', 'IVL').replace('-', '')\n",
+    "competing_short = COMPETING_MODEL_NAME\n",
+    "\n",
+    "# Model comparison metrics\n",
+    "metrics_data = [\n",
+    "    ['', current_short, competing_short],\n",
+    "    ['Mean F1', f\"{metrics['current_mean']:.1%}\", f\"{metrics['competing_mean']:.1%}\"],\n",
     "    ['Median', f\"{metrics['current_median']:.1%}\", f\"{metrics['competing_median']:.1%}\"],\n",
     "    ['Std Dev', f\"{metrics['current_std']:.1%}\", f\"{metrics['competing_std']:.1%}\"],\n",
-    "    ['Critical Fields', f\"{metrics['critical_current_mean']:.1%}\", f\"{metrics['critical_competing_mean']:.1%}\"],\n",
-    "    ['', '', ''],\n",
-    "    ['Statistical Test', 'Value', 'Result'],\n",
-    "    ['p-value (t-test)', f\"{stat_results['paired_ttest']['pvalue']:.4f}\", \n",
-    "     'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not Sig.'],\n",
-    "    [\"Cohen's d\", f\"{stat_results['cohens_d']:.2f}\", effect_interp],\n",
-    "    ['95% CI', f\"[{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\", ''],\n",
+    "    ['Critical', f\"{metrics['critical_current_mean']:.1%}\", f\"{metrics['critical_competing_mean']:.1%}\"],\n",
     "]\n",
     "\n",
-    "table = ax5.table(cellText=table_data, loc='center', cellLoc='center',\n",
-    "                  colWidths=[0.4, 0.3, 0.3])\n",
-    "table.auto_set_font_size(False)\n",
-    "table.set_fontsize(8)\n",
-    "table.scale(1, 1.4)\n",
+    "# Statistical tests\n",
+    "stats_data = [\n",
+    "    ['Test', 'p-value', 'Effect'],\n",
+    "    ['t-test', f\"{stat_results['paired_ttest']['pvalue']:.4f}\", \n",
+    "     '***' if stat_results['paired_ttest']['pvalue'] < 0.001 else ('**' if stat_results['paired_ttest']['pvalue'] < 0.01 else ('*' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'ns'))],\n",
+    "    [\"Cohen's d\", f\"{stat_results['cohens_d']:.2f}\", effect_interp],\n",
+    "    ['95% CI', f\"{stat_results['bootstrap_ci_95'][0]:+.0%} to {stat_results['bootstrap_ci_95'][1]:+.0%}\", ''],\n",
+    "]\n",
     "\n",
-    "# Style header rows\n",
-    "for i in [0, 6]:\n",
+    "# Draw metrics table\n",
+    "table1 = ax5.table(cellText=metrics_data, loc='upper center', cellLoc='center',\n",
+    "                   colWidths=[0.28, 0.36, 0.36], bbox=[0, 0.55, 1, 0.45])\n",
+    "table1.auto_set_font_size(False)\n",
+    "table1.set_fontsize(8)\n",
+    "\n",
+    "# Style metrics table\n",
+    "for j in range(3):\n",
+    "    table1[(0, j)].set_facecolor('#2ecc71' if j == 1 else ('#3498db' if j == 2 else '#f5f5f5'))\n",
+    "    table1[(0, j)].set_text_props(fontweight='bold', color='white' if j > 0 else 'black')\n",
+    "for i in range(1, 5):\n",
     "    for j in range(3):\n",
-    "        table[(i, j)].set_facecolor('#f0f0f0')\n",
-    "        table[(i, j)].set_text_props(fontweight='bold')\n",
+    "        table1[(i, j)].set_facecolor('#f9f9f9' if i % 2 == 0 else 'white')\n",
     "\n",
-    "ax5.set_title('E. Summary Statistics', fontsize=11, fontweight='bold', loc='left', pad=20)\n",
+    "# Draw stats table\n",
+    "table2 = ax5.table(cellText=stats_data, loc='lower center', cellLoc='center',\n",
+    "                   colWidths=[0.28, 0.36, 0.36], bbox=[0, 0, 1, 0.45])\n",
+    "table2.auto_set_font_size(False)\n",
+    "table2.set_fontsize(8)\n",
+    "\n",
+    "# Style stats table\n",
+    "for j in range(3):\n",
+    "    table2[(0, j)].set_facecolor('#555555')\n",
+    "    table2[(0, j)].set_text_props(fontweight='bold', color='white')\n",
+    "for i in range(1, 4):\n",
+    "    for j in range(3):\n",
+    "        table2[(i, j)].set_facecolor('#f9f9f9' if i % 2 == 0 else 'white')\n",
+    "\n",
+    "ax5.set_title('E. Summary Statistics', fontsize=11, fontweight='bold', loc='left', pad=10)\n",
     "\n",
     "# --- Panel F: Additional Capabilities (bottom spanning both columns) ---\n",
     "ax6 = fig.add_subplot(gs[3, :])\n",
