--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
     "# =============================================================================\n",
     "# These fields are EXCLUDED from direct comparison metrics but shown separately\n",
     "# as \"Additional Capabilities\" to highlight competitive advantage\n",
-    "EXCLUSIVE_FIELDS = [\"DOCUMENT_TYPE\"]\n",
+    "EXCLUSIVE_FIELDS = [\"DOCUMENT_TYPE\", \"STATEMENT_DATE_RANGE\"]\n",
     "\n",
     "print(f\"Schema fields: {len(SCHEMA_FIELDS)}\")\n",
     "print(f\"Exclusive fields (our model only): {EXCLUSIVE_FIELDS}\")\n",
@@ -504,7 +504,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "\ud83d\udcca ACCURACY:\n",
+      "📊 ACCURACY:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity           100.0%              20.4%     +79.6%         True\n",
       "           SUPPLIER_NAME   Identity           100.0%              58.8%     +41.2%         True\n",
@@ -523,7 +523,7 @@
       "       TRANSACTION_DATES      Dates            96.3%              56.9%     +39.4%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            98.9%              71.9%     +27.0%        False\n",
       "\n",
-      "\ud83d\udcc8 F1 SCORES (Position-Agnostic):\n",
+      "📈 F1 SCORES (Position-Agnostic):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN     100.0%        20.4%        +79.6%\n",
       "           SUPPLIER_NAME     100.0%        58.8%        +41.2%\n",
@@ -569,13 +569,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n\ud83d\udcca ACCURACY:\")\n",
+    "print(\"\\n📊 ACCURACY:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Agnostic):\")\n",
+    "    print(\"\\n📈 F1 SCORES (Position-Agnostic):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -874,12 +874,12 @@
       "Paired t-test:\n",
       "  t-statistic: 5.9033\n",
       "  p-value:     0.0000\n",
-      "  Significant at \u03b1=0.05: YES\n",
+      "  Significant at α=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 0.0000\n",
       "  p-value:     0.0001\n",
-      "  Significant at \u03b1=0.05: YES\n",
+      "  Significant at α=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 2.3360\n",
@@ -902,13 +902,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1693,7 +1693,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean accuracy of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -1795,8 +1795,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -1932,15 +1932,15 @@
     "\n",
     "**Position-by-position comparison:**\n",
     "- Position i: extracted[i] vs ground_truth[i]\n",
-    "- Match at same position \u2192 TP (True Positive)\n",
-    "- Mismatch at same position \u2192 FN (False Negative) \n",
-    "- Extra extracted items \u2192 FP (False Positive)\n",
-    "- Missing ground truth items \u2192 FN (False Negative)\n",
+    "- Match at same position → TP (True Positive)\n",
+    "- Mismatch at same position → FN (False Negative) \n",
+    "- Extra extracted items → FP (False Positive)\n",
+    "- Missing ground truth items → FN (False Negative)\n",
     "\n",
     "**Metrics:**\n",
     "- Precision = TP / (TP + FP)\n",
     "- Recall = TP / (TP + FN)  \n",
-    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
+    "- F1 = 2 × (Precision × Recall) / (Precision + Recall)\n",
     "\n",
     "**List field matching by type:**\n",
     "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
