--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -504,7 +504,7 @@
       "Field-Level Comparison (Comparable Fields)\n",
       "====================================================================================================\n",
       "\n",
-      "📊 ACCURACY:\n",
+      "\ud83d\udcca ACCURACY:\n",
       "                   field   category current_accuracy competing_accuracy difference  is_critical\n",
       "            BUSINESS_ABN   Identity           100.0%              20.4%     +79.6%         True\n",
       "           SUPPLIER_NAME   Identity           100.0%              58.8%     +41.2%         True\n",
@@ -523,7 +523,7 @@
       "       TRANSACTION_DATES      Dates            96.3%              56.9%     +39.4%        False\n",
       "TRANSACTION_AMOUNTS_PAID  Financial            98.9%              71.9%     +27.0%        False\n",
       "\n",
-      "📈 F1 SCORES (Position-Agnostic):\n",
+      "\ud83d\udcc8 F1 SCORES (Position-Agnostic):\n",
       "                   field current_f1 competing_f1 f1_difference\n",
       "            BUSINESS_ABN     100.0%        20.4%        +79.6%\n",
       "           SUPPLIER_NAME     100.0%        58.8%        +41.2%\n",
@@ -569,13 +569,13 @@
     "\n",
     "# Show accuracy columns\n",
     "acc_cols = ['field', 'category', 'current_accuracy', 'competing_accuracy', 'difference', 'is_critical']\n",
-    "print(\"\\n📊 ACCURACY:\")\n",
+    "print(\"\\n\ud83d\udcca ACCURACY:\")\n",
     "print(display_df[acc_cols].to_string(index=False))\n",
     "\n",
     "# Show F1 columns if available\n",
     "if has_f1:\n",
     "    f1_cols = ['field', 'current_f1', 'competing_f1', 'f1_difference']\n",
-    "    print(\"\\n📈 F1 SCORES (Position-Agnostic):\")\n",
+    "    print(\"\\n\ud83d\udcc8 F1 SCORES (Position-Agnostic):\")\n",
     "    print(display_df[f1_cols].to_string(index=False))\n",
     "\n",
     "# Display exclusive capabilities separately\n",
@@ -874,12 +874,12 @@
       "Paired t-test:\n",
       "  t-statistic: 5.9033\n",
       "  p-value:     0.0000\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Wilcoxon signed-rank test (non-parametric):\n",
       "  W-statistic: 0.0000\n",
       "  p-value:     0.0001\n",
-      "  Significant at α=0.05: YES\n",
+      "  Significant at \u03b1=0.05: YES\n",
       "\n",
       "Effect Size:\n",
       "  Cohen's d: 2.3360\n",
@@ -902,13 +902,13 @@
     "print(f\"  t-statistic: {stat_results['paired_ttest']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['paired_ttest']['pvalue']:.4f}\")\n",
     "sig_t = \"YES\" if stat_results['paired_ttest']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_t}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_t}\")\n",
     "\n",
     "print(f\"\\nWilcoxon signed-rank test (non-parametric):\")\n",
     "print(f\"  W-statistic: {stat_results['wilcoxon']['statistic']:.4f}\")\n",
     "print(f\"  p-value:     {stat_results['wilcoxon']['pvalue']:.4f}\")\n",
     "sig_w = \"YES\" if stat_results['wilcoxon']['pvalue'] < 0.05 else \"NO\"\n",
-    "print(f\"  Significant at α=0.05: {sig_w}\")\n",
+    "print(f\"  Significant at \u03b1=0.05: {sig_w}\")\n",
     "\n",
     "print(f\"\\nEffect Size:\")\n",
     "print(f\"  Cohen's d: {stat_results['cohens_d']:.4f}\")\n",
@@ -1571,24 +1571,43 @@
     "ax1.axvline(x=0.5, color='gray', linestyle=':', alpha=0.5)\n",
     "sns.despine(ax=ax1)\n",
     "\n",
-    "# --- Panel B: Category comparison ---\n",
-    "ax2 = fig.add_subplot(gs[1, 0])\n",
-    "cat_df = category_analysis.copy()\n",
-    "x_pos = np.arange(len(cat_df))\n",
-    "width = 0.35\n",
+    "# --- Panel B: Category comparison (Radar Chart) ---\n",
+    "ax2 = fig.add_subplot(gs[1, 0], polar=True)\n",
     "\n",
-    "ax2.bar(x_pos - width/2, cat_df['current_mean'], width, \n",
-    "        label=CURRENT_MODEL_NAME, color=colors_current, alpha=0.85)\n",
-    "ax2.bar(x_pos + width/2, cat_df['competing_mean'], width,\n",
-    "        label=COMPETING_MODEL_NAME, color=colors_competing, alpha=0.85)\n",
+    "# Calculate category averages\n",
+    "cat_data = []\n",
+    "for cat, fields in FIELD_CATEGORIES.items():\n",
+    "    cat_df_temp = comparison_df[comparison_df['field'].isin(fields)]\n",
+    "    if len(cat_df_temp) > 0:\n",
+    "        cat_data.append({\n",
+    "            'category': cat,\n",
+    "            'current': cat_df_temp['current_accuracy'].mean(),\n",
+    "            'competing': cat_df_temp['competing_accuracy'].mean()\n",
+    "        })\n",
     "\n",
-    "ax2.set_xticks(x_pos)\n",
-    "ax2.set_xticklabels(cat_df['category'], rotation=45, ha='right', fontsize=8)\n",
-    "ax2.set_ylabel('Mean Accuracy', fontsize=9)\n",
+    "radar_df = pd.DataFrame(cat_data)\n",
+    "categories_list = radar_df['category'].tolist()\n",
+    "N = len(categories_list)\n",
+    "\n",
+    "angles = [n / float(N) * 2 * np.pi for n in range(N)]\n",
+    "angles += angles[:1]\n",
+    "\n",
+    "# Plot current model\n",
+    "values_current = radar_df['current'].tolist()\n",
+    "values_current += values_current[:1]\n",
+    "ax2.plot(angles, values_current, 'o-', linewidth=2, color=colors_current, markersize=4)\n",
+    "ax2.fill(angles, values_current, alpha=0.25, color=colors_current)\n",
+    "\n",
+    "# Plot competing model\n",
+    "values_competing = radar_df['competing'].tolist()\n",
+    "values_competing += values_competing[:1]\n",
+    "ax2.plot(angles, values_competing, 'o-', linewidth=2, color=colors_competing, markersize=4)\n",
+    "ax2.fill(angles, values_competing, alpha=0.25, color=colors_competing)\n",
+    "\n",
+    "ax2.set_xticks(angles[:-1])\n",
+    "ax2.set_xticklabels(categories_list, fontsize=7)\n",
     "ax2.set_ylim(0, 1)\n",
-    "ax2.set_title('B. By Category', fontsize=11, fontweight='bold', loc='left')\n",
-    "ax2.legend().set_visible(False)\n",
-    "sns.despine(ax=ax2)\n",
+    "ax2.set_title('B. By Category', fontsize=11, fontweight='bold', loc='left', pad=15)\n",
     "\n",
     "# --- Panel C: Distribution comparison (box + strip) ---\n",
     "ax3 = fig.add_subplot(gs[1, 1])\n",
@@ -1693,7 +1712,7 @@
     "    exc_text += \"The following fields are unique to our model (not available in competing model):\\n\\n\"\n",
     "    for _, row in exclusive_df.iterrows():\n",
     "        acc_str = f\"{row['current_accuracy']:.1%}\" if pd.notna(row['current_accuracy']) else \"N/A\"\n",
-    "        exc_text += f\"   • {row['field']}: {acc_str} accuracy\\n\"\n",
+    "        exc_text += f\"   \u2022 {row['field']}: {acc_str} accuracy\\n\"\n",
     "    if not np.isnan(metrics.get('exclusive_mean', np.nan)):\n",
     "        exc_text += f\"\\n   Mean accuracy of exclusive capabilities: {metrics['exclusive_mean']:.1%}\"\n",
     "else:\n",
@@ -1795,8 +1814,8 @@
     "\n",
     "## Statistical Significance\n",
     "\n",
-    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
-    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at α=0.05)\n",
+    "- **Paired t-test p-value**: {stat_results['paired_ttest']['pvalue']:.4f} ({'Significant' if stat_results['paired_ttest']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
+    "- **Wilcoxon test p-value**: {stat_results['wilcoxon']['pvalue']:.4f} ({'Significant' if stat_results['wilcoxon']['pvalue'] < 0.05 else 'Not significant'} at \u03b1=0.05)\n",
     "- **Cohen's d effect size**: {stat_results['cohens_d']:.4f} ({effect_interp})\n",
     "- **95% CI for difference**: [{stat_results['bootstrap_ci_95'][0]:+.1%}, {stat_results['bootstrap_ci_95'][1]:+.1%}]\n",
     "\n",
@@ -1932,15 +1951,15 @@
     "\n",
     "**Position-by-position comparison:**\n",
     "- Position i: extracted[i] vs ground_truth[i]\n",
-    "- Match at same position → TP (True Positive)\n",
-    "- Mismatch at same position → FN (False Negative) \n",
-    "- Extra extracted items → FP (False Positive)\n",
-    "- Missing ground truth items → FN (False Negative)\n",
+    "- Match at same position \u2192 TP (True Positive)\n",
+    "- Mismatch at same position \u2192 FN (False Negative) \n",
+    "- Extra extracted items \u2192 FP (False Positive)\n",
+    "- Missing ground truth items \u2192 FN (False Negative)\n",
     "\n",
     "**Metrics:**\n",
     "- Precision = TP / (TP + FP)\n",
     "- Recall = TP / (TP + FN)  \n",
-    "- F1 = 2 × (Precision × Recall) / (Precision + Recall)\n",
+    "- F1 = 2 \u00d7 (Precision \u00d7 Recall) / (Precision + Recall)\n",
     "\n",
     "**List field matching by type:**\n",
     "- **Monetary lists** (LINE_ITEM_PRICES): Numeric comparison with 1% tolerance\n",
