Enhance y-axis ticks in radar chart for better readability
Updated the y-axis ticks in the radar chart to include additional values (0.4, 0.8) for improved granularity. Adjusted the corresponding tick labels to maintain clarity while reducing clutter.

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1607,8 +1607,8 @@
     "ax2.set_xticks(angles[:-1])\n",
     "ax2.set_xticklabels(categories_list, fontsize=7)\n",
     "ax2.set_ylim(0, 1)\n",
-    "ax2.set_yticks([0.2, 0.6, 1.0])\n",
-    "ax2.set_yticklabels(['0.2', '0.6', '1.0'], fontsize=6)\n",
+    "ax2.set_yticks([0.2, 0.4, 0.6, 0.8, 1.0])\n",
+    "ax2.set_yticklabels(['0.2', '', '0.6', '', '1.0'], fontsize=6)\n",
     "ax2.set_title('B. By Category', fontsize=11, fontweight='bold', loc='left', pad=15)\n",
     "\n",
     "# --- Panel C: Distribution comparison (box + strip) ---\n",
