Add percentage labels to accuracy comparison bar chart
- Enhanced the visualization of model accuracies by adding percentage labels at the end of each bar in the accuracy comparison plot.
- Labels are positioned for both the current model and the competing model for better clarity.

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1571,6 +1571,15 @@
     "ax1.axvline(x=0.5, color='gray', linestyle=':', alpha=0.5)\n",
     "sns.despine(ax=ax1)\n",
     "\n",
+    "# Add percentage labels at end of bars\n",
+    "for i, (_, row) in enumerate(plot_sorted.iterrows()):\n",
+    "    # Current model (top bar)\n",
+    "    ax1.text(row['current_accuracy'] + 0.01, i + 0.2, f\"{row['current_accuracy']:.0%}\", \n",
+    "             va='center', ha='left', fontsize=6, color=colors_current)\n",
+    "    # Competing model (bottom bar)\n",
+    "    ax1.text(row['competing_accuracy'] + 0.01, i - 0.2, f\"{row['competing_accuracy']:.0%}\", \n",
+    "             va='center', ha='left', fontsize=6, color=colors_competing)\n",
+    "\n",
     "# --- Panel B: Category comparison (Radar Chart) ---\n",
     "ax2 = fig.add_subplot(gs[1, 0], polar=True)\n",
     "\n",
