Fix sorting order in model accuracy comparison plot to use 'current_accuracy' instead of 'difference'

--- a/notebooks_v2/model_accuracy_comparison.ipynb
+++ b/notebooks_v2/model_accuracy_comparison.ipynb
@@ -1550,7 +1550,7 @@
     "\n",
     "# --- Panel A: Field-level comparison (horizontal bar) ---\n",
     "ax1 = fig.add_subplot(gs[0, :])\n",
-    "plot_sorted = plot_df.sort_values('difference', ascending=True)\n",
+    "plot_sorted = plot_df.sort_values('current_accuracy', ascending=True)\n",
     "y_pos = np.arange(len(plot_sorted))\n",
     "\n",
     "# Use seaborn colors\n",
